# AT

./: 3d-at-normals-u2-v1.cpp  3d-at-normals.cpp  CMakeLists.txt  README.md  VTKWriter.ih  at-0p-1p-alpha-beta.cpp  at-0p-1p-couleur.cpp  at-0p-1p.cpp  at-2p-1p.cpp  at-TM-0p-0p-matrix.cpp  at-TM-0p-1p-alpha-beta.cpp  at-TM-0p-1p-matrix.cpp  at-TM-0p-1p.cpp  at-color.sh  at-cremers.cpp  at-gl.sh  at-inp.sh  at-sansTenseur-0p-1p.cpp  at-tenseur-0p-1p.cpp  at-u0-v1-alpha-scale.cpp  at-u0-v1-couleur-snr.cpp  at-u0-v1-couleur.cpp  at-u0-v1-gl.cpp  at-u0-v1-inpainting-couleur.cpp  at-u0-v1-inpainting-gl.cpp  at-u0-v1-inpainting.cpp  at-u0-v1-snr.cpp  at-u0-v1.cpp  at-u2-v0-couleur-snr.cpp  at-u2-v0-couleur.cpp  at-u2-v0-gl.cpp  at-u2-v0-snr.cpp  at-u2-v0.cpp  at.cpp  structureTensor.h  structureTensor.ih  supp-mat.sh  test-couleur.cpp  u0-v1-snr.sh  u0-v1-snr2.sh  (+3 more)
Images/: Lena-Soderberg-image-test.ppm  barbara-b01.pgm  barbara-cropped-b01.pgm  barbara-cropped-b02.pgm  barbara-cropped.pgm  barbara.pgm  barbara64-b01.pgm  barbara64-b02.pgm  barbara64.pgm  binary-shape-2-flou-4.pgm  binary-shape-2.pgm  binary-shape-flou-2.pgm  binary-shape-flou-4.pgm  binary-shape.pgm  cameraman128.pgm  cameraman256.pgm  carre10.pgm  carre2Degrades128.pgm  carre2Degrades128b02.pgm  carre2Degrades128b04.pgm  carre2Degrades128b06.pgm  carre2Degrades128b08.pgm  carre2Degrades32.pgm  carre2Degrades32b02.pgm  carre2Degrades32b04.pgm  carre2Degrades32b06.pgm  carre2Degrades32b08.pgm  carre2Degrades64b06.pgm  carre64.pgm  carreDegrade32b02.pgm  carreDegradeHaut_NtoB64.pgm  carreDegradeHaut_NtoG64.pgm  carredb02.pgm  carredb04.pgm  carredb08.pgm  cercle-barre-b0.pgm  cercle-barre-b1.pgm  cercle-barre-b2.pgm  cercle-barre-b4.pgm  cercle-barre-b8.pgm  (+159 more)
mask/: mask-disque-q45.pgm  mask-lion-grillage.pgm  no-mask-64.pgm  scribble-mask-64.pgm  text-mask-128.pgm  text-mask-256.pgm  text2-mask-256.pgm  triple-mask-64.pgm
not_working/: at-v1v2.cpp  at-vabs.cpp  at-vm1to1.cpp
old/: at-2p-1p.cpp  at-TM-0p-1p-matrix.cpp  at-TM-0p-1p.cpp  at-TM-0pd-1p-matrix.cpp
snr/u0-v1/barbara-cropped-b01/: bb1-l0.0054088-u.pgm  bb1-l0.0054088-v.pgm  bb1.txt
snr/u0-v1/barbara64-b01/: b64b1-l0.0010483-a0.0104826-u0-v1.eps  b64b1-l0.0010483-a0.0125791-u0-v1.eps  b64b1-l0.0010483-a0.0150949-u0-v1.eps  b64b1-l0.0010483-a0.0181139-u0-v1.eps  b64b1-l0.0010483-a0.0217367-u0-v1.eps  b64b1-l0.0010483-a0.0260841-u0-v1.eps  b64b1-l0.0010483-a0.0313009-u0-v1.eps  b64b1-l0.0010483-a0.0375610-u0-v1.eps  b64b1-l0.0010483-a0.0450732-u0-v1.eps  b64b1-l0.0010483-a0.0540879-u0-v1.eps  b64b1-l0.0010483-a0.0649055-u0-v1.eps  b64b1-l0.0010483-a0.0778866-u0-v1.eps  b64b1-l0.0010483-a0.0934639-u0-v1.eps  b64b1-l0.0010483-a0.1121567-u0-v1.eps  b64b1-l0.0010483-a0.1345880-u0-v1.eps  b64b1-l0.0010483-a0.1615056-u0-v1.eps  b64b1-l0.0010483-a0.1938067-u0-v1.eps  b64b1-l0.0010483-a0.2325680-u0-v1.eps  b64b1-l0.0010483-a0.2790816-u0-v1.eps  b64b1-l0.0010483-a0.3348980-u0-v1.eps  b64b1-l0.0010483-a0.4018776-u0-v1.eps  b64b1-l0.0010483-a0.4822531-u0-v1.eps  b64b1-l0.0010483-a0.5787037-u0-v1.eps  b64b1-l0.0010483-a0.6944444-u0-v1.eps  b64b1-l0.0010483-a0.8333333-u0-v1.eps  b64b1-l0.0010483-a1.0000000-u0-v1.eps  b64b1-l0.0012579-a0.0104826-u0-v1.eps  b64b1-l0.0012579-a0.0125791-u0-v1.eps  b64b1-l0.0012579-a0.0150949-u0-v1.eps  b64b1-l0.0012579-a0.0181139-u0-v1.eps  b64b1-l0.0012579-a0.0217367-u0-v1.eps  b64b1-l0.0012579-a0.0260841-u0-v1.eps  b64b1-l0.0012579-a0.0313009-u0-v1.eps  b64b1-l0.0012579-a0.0375610-u0-v1.eps  b64b1-l0.0012579-a0.0450732-u0-v1.eps  b64b1-l0.0012579-a0.0540879-u0-v1.eps  b64b1-l0.0012579-a0.0649055-u0-v1.eps  b64b1-l0.0012579-a0.0778866-u0-v1.eps  b64b1-l0.0012579-a0.0934639-u0-v1.eps  b64b1-l0.0012579-a0.1121567-u0-v1.eps  (+637 more)
snr/u0-v1/barbara64-b02/: b64b2-l0.0010483-a0.0104826-u0-v1.eps  b64b2-l0.0010483-a0.0125791-u0-v1.eps  b64b2-l0.0010483-a0.0150949-u0-v1.eps  b64b2-l0.0010483-a0.0181139-u0-v1.eps  b64b2-l0.0010483-a0.0217367-u0-v1.eps  b64b2-l0.0010483-a0.0260841-u0-v1.eps  b64b2-l0.0010483-a0.0313009-u0-v1.eps  b64b2-l0.0010483-a0.0375610-u0-v1.eps  b64b2-l0.0010483-a0.0450732-u0-v1.eps  b64b2-l0.0010483-a0.0540879-u0-v1.eps  b64b2-l0.0010483-a0.0649055-u0-v1.eps  b64b2-l0.0010483-a0.0778866-u0-v1.eps  b64b2-l0.0010483-a0.0934639-u0-v1.eps  b64b2-l0.0010483-a0.1121567-u0-v1.eps  b64b2-l0.0010483-a0.1345880-u0-v1.eps  b64b2-l0.0010483-a0.1615056-u0-v1.eps  b64b2-l0.0010483-a0.1938067-u0-v1.eps  b64b2-l0.0010483-a0.2325680-u0-v1.eps  b64b2-l0.0010483-a0.2790816-u0-v1.eps  b64b2-l0.0010483-a0.3348980-u0-v1.eps  b64b2-l0.0010483-a0.4018776-u0-v1.eps  b64b2-l0.0010483-a0.4822531-u0-v1.eps  b64b2-l0.0010483-a0.5787037-u0-v1.eps  b64b2-l0.0010483-a0.6944444-u0-v1.eps  b64b2-l0.0010483-a0.8333333-u0-v1.eps  b64b2-l0.0010483-a1.0000000-u0-v1.eps  b64b2-l0.0012579-a0.0104826-u0-v1.eps  b64b2-l0.0012579-a0.0125791-u0-v1.eps  b64b2-l0.0012579-a0.0150949-u0-v1.eps  b64b2-l0.0012579-a0.0181139-u0-v1.eps  b64b2-l0.0012579-a0.0217367-u0-v1.eps  b64b2-l0.0012579-a0.0260841-u0-v1.eps  b64b2-l0.0012579-a0.0313009-u0-v1.eps  b64b2-l0.0012579-a0.0375610-u0-v1.eps  b64b2-l0.0012579-a0.0450732-u0-v1.eps  b64b2-l0.0012579-a0.0540879-u0-v1.eps  b64b2-l0.0012579-a0.0649055-u0-v1.eps  b64b2-l0.0012579-a0.0778866-u0-v1.eps  b64b2-l0.0012579-a0.0934639-u0-v1.eps  b64b2-l0.0012579-a0.1121567-u0-v1.eps  (+637 more)
snr/u0-v1/lena-64-1-b01/: l64b1-l0.0054088-a1.0000000-u0-v1.eps  l64b1-l0.0093464-a1.0000000-u0-v1.eps  l64b1.txt
snr/u0-v1/lena-64-1-b02/: l64b2-l0.0161506-a0.6944444-u0-v1.eps  l64b2.txt
snr/u0-v1/lena-64-b02-refine/: l64b02.txt
snr/u0-v1/mandrill-64-1-b01/: l64b1.txt  m64b1-l0.0054088-a1.0000000-u0-v1.eps  m64b1.txt
snr/u0-v1/mandrill-64-1-b02/: l64b2.txt  m64b2-l0.0232568-a1.0000000-u0-v1.eps  m64b2.txt
snr/u0-v1/triple-spirale-b01/: tsb1-l0.0001048-a0.0104826-u0-v1.eps  tsb1-l0.0001048-a0.0125791-u0-v1.eps  tsb1-l0.0001048-a0.0150949-u0-v1.eps  tsb1-l0.0001048-a0.0181139-u0-v1.eps  tsb1-l0.0001048-a0.0217367-u0-v1.eps  tsb1-l0.0001048-a0.0260841-u0-v1.eps  tsb1-l0.0001048-a0.0313009-u0-v1.eps  tsb1-l0.0001048-a0.0375610-u0-v1.eps  (+669 more)
(+3882 files in other folders)
